--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <style>
         body {
@@ -30,30 +29,65 @@
             margin-top: 70px;
             margin-left: 20px;
         }
+
+        /* New Styles */
+        #uploadedImage {
+            max-width: 100%;
+            height: auto;
+            max-height: 300px; /* Adjust the maximum height as needed */
+        }
+
+        .image-container {
+            margin-top: 10px; /* Adjust vertical spacing */
+        }
+
+        .file-input-container {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 10px;
+        }
+
+        .file-input-label {
+            margin-bottom: 0;
+            margin-right: 10px;
+            margin-top: 7px; /* Adjust vertical alignment */
+        }
+
+        .file-input {
+            margin-top: 5px; /* Adjust vertical alignment */
+        }
     </style>
     <title>Text Extractor</title>
 </head>
 
 <body>
-    <form class="d-flex">
-        <a href="/history" class="d-flex btn btn-primary">History</a>
-    </form>
-    <div class="input-group mb-3">
-        <form class="form" action="/submitImage/" method="POST" enctype="multipart/form-data">
-            <div class='row'>
-                <div class='col-xs-4'>
-                    <label for='ocrImage'>Choose Image: </label>
-                    <input class='form-control' type="file" name="ocrImage" id="ocrImage" src="" alt="" onchange='showImage(event)' required>
-                </div>
-                <div class='col-xs-4'>
-                    <img src='' id='uploadedImage' width='200' alt='no image selected'>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <form class="d-flex">
+                    <a href="/history" class="d-flex btn btn-primary">History</a>
+                </form>
+                <div class="input-group mb-3">
+                    <form class="form" action="/submitImage/" method="POST" enctype="multipart/form-data">
+                        <div class='file-input-container'>
+                            
+                            <input class='form-control file-input' type="file" name="ocrImage" id="ocrImage" src="" alt="" onchange='showImage(event)' required>
+                            
+                        </div>
+                        <div class='row mt-3'>
+                            <div class='col-12'>
+                                <input class='btn btn-success w-100' type="submit" value="Convert" />
+                            </div>
+                        </div>
+                        <div class="file-input-container row mt-3 " >
+                            <img src='' id='uploadedImage' alt='no image selected'>
+                        </div>
+                        
+                    </form>
                 </div>
             </div>
-            <div class='row'>
-                <div class='col-xs-12'>
-                    <input class='btn btn-success' type="submit" value="Convert" />
-                </div>
-            </div>
+            
+        </div>
     </div>
     {% with messages = get_flashed_messages() %} {% for message in messages %} {%endfor%} {%endwith%}
 </body>
