--- a/templates/history.html
+++ b/templates/history.html
@@ -2,6 +2,9 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+        crossorigin="anonymous">
 <style>
     body {
         background-color: #65d7f3;
@@ -23,16 +26,87 @@
         margin: 20px 20px;
         border: 2px solid #000000;
     }
+    body {
+            background-color: rgb(181, 247, 247);
+        }
+        
+        .d-flex {
+            margin-top: 10px;
+            margin-left: 20px;
+        }
+        
+        .btn-outline-success {
+            border: orange;
+            border-width: 2px;
+            border-style: solid;
+            color: rgb(19, 15, 15);
+            font-size: 20px;
+        }
+        
+        .mb-3 {
+            margin-top: 70px;
+            margin-left: 20px;
+        }
+
+        /* New Styles */
+        #uploadedImage {
+            max-width: 100%;
+            height: auto;
+            max-height: 300px; /* Adjust the maximum height as needed */
+        }
+
+        .image-container {
+            margin-top: 10px; /* Adjust vertical spacing */
+        }
+
+        .file-input-container {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 10px;
+        }
+
+        .file-input-label {
+            margin-bottom: 0;
+            margin-right: 10px;
+            margin-top: 7px; /* Adjust vertical alignment */
+        }
+
+        .file-input {
+            margin-top: 5px; /* Adjust vertical alignment */
+        }
 </style>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Text Extractor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact_us">Contact Us</a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="para">
         <p>Click On Image To Check Extracted Text</p>
     </div>
     <div class="main">
         {% for items in data %}
         <button type="button" id="tes" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter{{loop.index}}">
-    <img src="{{items[1]}}" alt="Image" width="300" height="300">
+    <img src="static/{{items[1]}}" alt="Image" width="300" height="300">
     </button>
         <div class="modal fade" id="exampleModalCenter{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
