--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <title>Text Extractor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+        crossorigin="anonymous">
     <style>
         body {
             background-color: rgb(181, 247, 247);
@@ -57,49 +58,65 @@
             margin-top: 5px; /* Adjust vertical alignment */
         }
     </style>
-    <title>Text Extractor</title>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Text Extractor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact_us">Contact Us</a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <form class="d-flex">
-                    <a href="/history" class="d-flex btn btn-primary">History</a>
-                </form>
+            <div class="col-md-8 mx-auto">
                 <div class="input-group mb-3">
                     <form class="form" action="/submitImage/" method="POST" enctype="multipart/form-data">
                         <div class='file-input-container'>
-                            
-                            <input class='form-control file-input' type="file" name="ocrImage" id="ocrImage" src="" alt="" onchange='showImage(event)' required>
-                            
+                            <input class='form-control file-input' type="file" name="ocrImage" id="ocrImage" src=""
+                                alt="" onchange='showImage(event)' required>
                         </div>
                         <div class='row mt-3'>
                             <div class='col-12'>
                                 <input class='btn btn-success w-100' type="submit" value="Convert" />
                             </div>
                         </div>
-                        <div class="file-input-container row mt-3 " >
+                        <div class="file-input-container row mt-3">
                             <img src='' id='uploadedImage' alt='no image selected'>
                         </div>
-                        
                     </form>
                 </div>
             </div>
-            
         </div>
     </div>
-    {% with messages = get_flashed_messages() %} {% for message in messages %} {%endfor%} {%endwith%}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" charset="utf-8">
+        function showImage(event) {
+            uploadedImage = document.getElementById('ocrImage').files[0];
+            console.log(uploadedImage);
+            document.getElementById('uploadedImage').src = URL.createObjectURL(event.target.files[0]);
+        }
+    </script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" charset="utf-8">
-    function showImage(event) {
-        uploadedImage = document.getElementById('ocrImage').files[0];
-        console.log(uploadedImage);
-        document.getElementById('uploadedImage').src = URL.createObjectURL(event.target.files[0]);
-    }
-</script>
 
 </html>
