--- a/templates/textFile.html
+++ b/templates/textFile.html
@@ -1,86 +1,137 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <title>Result | OCR Application</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+        crossorigin="anonymous">
     <style>
         body {
-            background-color: rgba(240, 197, 158, 0.753);
+            background-color: rgb(181, 247, 247);
         }
-        
-        #textValue {
-            margin: 20px, 20px, 20px, 20px;
-            padding: 20px, 20px, 20px, 20px;
+
+        h2 {
+            margin-top: 20px;
+            color: rgb(19, 15, 15);
+        }
+
+        .text-container {
+            margin: 20px;
+            padding: 2px;
             background-color: rgb(143, 253, 253);
-            border: 5px black solid;
+            border: 5px solid black;
         }
-        
-        .d-flex {
-            margin-top: 10px;
-            margin-left: 20px;
-        }
-        
-        .col-lg-6 {
-            left: 25%;
-        }
-        
+
         .form-control {
-            background-color: aquamarine;
+            background-color: white;
             color: black;
+            border: 2px solid rgb(60, 50, 32);
+            resize: none;
         }
-        
+
         .buttonn {
-            margin-top: 34%;
-            margin-left: -2.4%;
+            margin-top: 10px;
         }
-        
+
         .btn {
             background-color: rgb(43, 143, 236);
             color: black;
+        }
+
+        /* Custom Styles for Image */
+        .image-container {
+            margin-top: 20px;
+            border: 5px solid black;
+            padding: 10px;
+        }
+
+        .image-preview {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: auto;
+        }
+
+        @media (max-width: 768px) {
+            .text-container,
+            .image-container {
+                margin-top: 10px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <center>
-        <h2>OCR Application using Flask</h2>
-    </center>
-    <form class="d-flex">
-        <a href="/history" class="d-flex btn btn-primary">History</a>
-    </form>
-    <center>
-
-        <div class="col-lg-6">
-            <div class="form-group">
-                <textarea class="form-control" rows="20">{{ text }}</textarea>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Text Extractor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact_us">Contact Us</a>
+                    </li>
+                    
+                </ul>
             </div>
         </div>
+    </nav>
 
-    </center>
-    <form method="get" accept-charset="utf-8">
-        <button type="button" class='btn btn-info buttonn' onclick='downloadText()'>Download</button>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9 mx-auto">
+                <h2 class="text-center">OCR Result</h2>
+                <div class="row">
+                    <div class="col-md-7">
+                        <!-- Text Display -->
+                        <div class="text-container">
+                            <div class="form-group">
+                                <textarea class="form-control" rows="10" placeholder="Extracted text will appear here..."
+                                    readonly>{{ text }}</textarea>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-info buttonn" onclick="downloadText()">Download Text</button>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <!-- Image Display -->
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename=filename) }}" class="image-preview" alt="Preview Image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- download text file of text in textarea -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    <script>
+        function downloadText() {
+            var text = document.querySelector('textarea').value;
+            var filename = "extracted_text.txt";
+            var blob = new Blob([text], {
+                type: "text/plain;charset=utf-8"
+            });
+            saveAs(blob, filename);
+        }
+    </script>
 
-
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script>
-    function downloadText() {
-        var text = document.querySelector('textarea').value;
-        var filename = "text.txt";
-        var blob = new Blob([text], {
-            type: "text/plain;charset=utf-8"
-        });
-        saveAs(blob, filename);
-    }
-</script>
 
 </html>
